--- a/index.html
+++ b/index.html
@@ -21,28 +21,23 @@
 
     <div class="container">
         <div class="row">
-          <div class="col-10"><h4>Matrikulasi merupakan sebuah program penyetaraan atau pengenalan kampus yang dikhususkan untuk mahasiswa baru Umt. Peserta matrikulasi mereka yang mendaftar pada gelombang 3 C. Matrikulasi bersifat wajib diikuti oleh calon mahasiswa baru.Pada matrikulasi saya mendapatkan mata kuliah pengantar manajemen</h4>
-            <img src="/img/tugas2.jpeg" class="img-thumbnail" style="width: 25cm;" alt="..."></div>
-          <div class="col-2 border-bottom border-start border-black border-2"><h6 class="text-center">DAFTAR MATERI
-            PRAKTEK
-            PALING FAVORIT</h6>
-            <p>1. Pengenalan
-                HTML</p>
-                <p>2. Simulasi Bisnis</p>
-                <p>3. Project
-                    Manajemen</p>
-        </div>
-        <div class="w-100"></div>
-    <div class="col-10"></div>
-    <div class="col-2 border-bottom border-start border-black border-2"><h6>DAFTAR DOSEN MATRIKULASI</h6>
-        <h6>Sandi Martono,S.Kom, M.T.I</h6>
-    </div>
+          <div class="col-sm-10"><p class="font-monospace mt-3 fs-5">Matrikulasi merupakan sebuah program penyetaraan atau pengenalan kampus yang dikhususkan untuk mahasiswa baru Umt. Peserta matrikulasi mereka yang mendaftar pada gelombang 3 C. Matrikulasi bersifat wajib diikuti oleh calon mahasiswa baru.Pada matrikulasi saya mendapatkan mata kuliah pengantar manajemen</p>
+            <img src="/img/tugas2.jpeg" class="img-thumbnail" style="width: 30cm;" alt="..."></div>
+          <div class="col-sm-2 border-bottom border-start border-black border-2">
+            <p class="font-monospace mt-3 text-center">DAFTAR MATERI PRAKTEK PALING FAVORIT</p>
+            <p class="font-monospace">1.Pengenalan HTML</p>
+            <p class="font-monospace">2.Simulasi Bisnis</p>
+            <p class="font-monospace">3.Project Manajemen</p>
+          </div>
+    <div class="col-sm-10"><p class="font-monospace mt-3 fs-5"></p></div>
+    <div class="col-sm-2 border-bottom border-start border-black border-2">
+      <p class="font-monospace">DAFTAR DOSEN MATRIKULASI</p>
+        <p class="font-monospace">Sandi Martono,S.Kom, M.T.I</p></div>
   </div>
-        </div>
-      </div>
+    </div>
 
+    <p class="font-monospace mt-3 fs-5">Setiap program akan menyesuaikan mata kuliah pengantar manajemen sesuai kebutuhan di fakultas ekonomi dan bisnis saya belajar mengenai teori manajemen ilmiah. Teori manajemen ilmiah dan lain sebagainya.Pengajar disini cukup ramah, interaktif dan mengajar dengan baik. Pada mata kuliah dasar manajemen saya mendapat banyak pengetahuan dan tentunya meningkat keterampilan saya pada praktek penggunaan aplikasi office dan pembuatan web</p>
 
-      <h4>Setiap program akan menyesuaikan mata kuliah pengantar manajemen sesuai kebutuhan di fakultas ekonomi dan bisnis saya belajar mengenai teori manajemen ilmiah. Teori manajemen ilmiah dan lain sebagainya.Pengajar disini cukup ramah, interaktif dan mengajar dengan baik. Pada mata kuliah dasar manajemen saya mendapat banyak pengetahuan dan tentunya meningkat keterampilan saya pada praktek penggunaan aplikasi office dan pembuatan web.</h4>
 
 
 
