--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="border border-end-0 border-black border-4"></div>
 
     <div><h1 class="text-center">MATRIKULASI MANAJEMEN</h1> 
-        <h1 class="border-bottom border-dark border-2 text-center">S1 TAHUN</h1></div>
+        <h1 class="border-bottom border-dark border-2 text-center">S1 TAHUN 2022</h1></div>
 
 <div class="border border-end-0 border-black border-5"></div>
 
